syntax = "proto3";
package util;

option go_package = "../gmproto";

message EmptyArr {

}
